<resources>
    <string name="app_name">SGDH</string>
    <string name="server_client_id">357643982120-4gh879iah5lkf1gpg1qe41o0adojdooo.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">SGDH Móvil</string>
    <string name="nav_header_subtitle">usuario@sgdh.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Presentación</string>

    <string name="login_title">Bienvenido</string>
    <string name="login_subtitle">Ingresa tus credenciales para acceder</string>
    <string name="label_email">Correo Institucional</string>
    <string name="label_password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_google">Continuar con Google</string>
    <string name="or">o</string>

    <string name="biometric_title">¡Hola de nuevo!</string>
    <string name="biometric_content_desc">Icono de Huella</string>
    <string name="biometric_hint">Toca el icono para validar tu huella</string>
    <string name="use_other_account">Usar contraseña u otra cuenta</string>
</resources>